<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.brandeis.cystant.MainActivity" >

    <TextView
        android:id="@+id/mytime"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="35sp" />
    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:text="@string/weather" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/distance"
        android:textColor="#DC143C"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/miles"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:text="total miles"
        android:textColor="#808080"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/times"
            android:textColor="#DC143C"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/average_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/average_speed"
            android:textColor="#DC143C"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_time"
            android:textColor="#DC143C"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/string_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="times"
            android:textColor="#808080"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/string_average_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="average speed"
            android:textColor="#808080"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/string_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="total time"
            android:textColor="#808080"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >
    
    <Button
        android:id="@+id/StartButton"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="startAnotherActivity"
        android:text="start cycling" />

    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="startAnotherActivity"
        android:text="history record"
        android:textColor="#ffffff" />
    
	</LinearLayout>
</LinearLayout>